k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-backend
  template:
    metadata:
      labels:
        app: qr-backend
    spec:
      containers:
        - name: qr-backend
          image: nikilasilva/nanolink-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: qr-backend-service
spec:
  type: NodePort
  selector:
    app: qr-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001 # External access
